# zkvm-benchmarks

./: .gitignore  Makefile  README.md  agg-sp1gpu-csv.sh  install.sh  pyproject.toml
cairo-m/: Cargo.toml
cairo-m/src/: main.rs
cairo-m/test_data/: fibonacci_loop.cm  fibonacci_loop.json
cairo-zero/: Cargo.toml
cairo-zero/src/: main.rs
cairo-zero/test_data/: fibonacci.cairo  fibonacci_10.json  fibonacci_100.json  fibonacci_1000.json  fibonacci_10000.json  fibonacci_100000.json
ethblock-utils/: Cargo.toml
ethblock-utils/src/: eth_transfer.rs  lib.rs  main.rs
guests/: Cargo.toml
guests/src/: ecdsa.rs  ethtransfer.rs  fib.rs  lib.rs  revm.rs
jolt/: .gitignore  Cargo.toml  rust-toolchain
jolt/bigmem-guest/: Cargo.toml
jolt/ecdsa-guest/: Cargo.toml
jolt/ecdsa-guest/src/: lib.rs  main.rs
jolt/fibonacci-guest/: Cargo.toml
jolt/fibonacci-guest/src/: lib.rs
jolt/sha2-chain-guest/: Cargo.toml
jolt/sha2-guest/: Cargo.toml
jolt/sha3-chain-guest/: Cargo.toml
jolt/sha3-guest/: Cargo.toml
jolt/src/: main.rs
jolt/transfer-eth-guest/: Cargo.toml
jolt/transfer-eth-guest/src/: lib.rs  main.rs
miden/: Cargo.toml
miden/src/: fibonacci.masm  fibonacci_repeat.masm  main.rs
noir_provekit/: Cargo.toml  rust-toolchain.toml
noir_provekit/runner/: Cargo.toml
noir_provekit/runner/src/: main.rs
noir_provekit/runner/test_data/: Nargo.toml
noir_provekit/runner/test_data/noir_fib/: Nargo.toml
noir_provekit/runner/test_data/noir_fib_10/: Nargo.toml
noir_provekit/runner/test_data/noir_fib_100/: Nargo.toml
noir_provekit/runner/test_data/noir_fib_1000/: Nargo.toml
noir_provekit/runner/test_data/noir_fib_10000/: Nargo.toml
noir_provekit/runner/test_data/noir_fib_100000/: Nargo.toml
noir_provekit/runner/test_data/noir_fib_lib/: Nargo.toml
novanet/: Cargo.toml  README.md
novanet/ethblock/: Cargo.toml
novanet/ethblock-utils/src/: lib.rs
novanet/ethblock/src/: lib.rs
novanet/fib/: Cargo.toml  store.wat
novanet/fib/src/: lib.rs
novanet/fibonacci/: Cargo.toml
novanet/fibonacci/src/: lib.rs  main.rs
novanet/runner/: Cargo.toml
novanet/runner/src/: main.rs
openvm/: .gitignore  Cargo.toml  rust-toolchain.toml
openvm/ecdsa-guest/: Cargo.toml
openvm/ecdsa-guest/src/: main.rs
openvm/fibonacci-guest/: Cargo.toml
openvm/fibonacci-guest/src/: main.rs
openvm/sha2-guest/: Cargo.toml
openvm/sha2-guest/src/: main.rs
openvm/src/: main.rs
openvm/transfer-eth-guest/: Cargo.toml
openvm/transfer-eth-guest/src/: main.rs
pico/: Cargo.toml
pico/ecdsa-guest/: Cargo.toml
pico/ecdsa-guest/elf/: riscv32im-pico-zkvm-elf
pico/ecdsa-guest/src/: main.rs
pico/ecdsa/app/: Cargo.toml
pico/ecdsa/app/src/: main.rs
pico/ecdsa/lib/: Cargo.toml
pico/ecdsa/lib/src/: lib.rs
pico/ecdsa/prover/: Cargo.toml
pico/ecdsa/prover/src/: main.rs
pico/ethblock/: .gitignore
pico/ethblock-guest/: Cargo.toml
pico/ethblock-guest/src/: main.rs
pico/ethblock/app/: Cargo.toml
pico/ethblock/app/src/: main.rs
pico/ethblock/lib/: Cargo.toml
pico/ethblock/lib/src/: lib.rs
pico/ethblock/prover/: Cargo.toml
pico/fibonacci/: Cargo.toml
pico/fibonacci-guest/: Cargo.toml
pico/fibonacci-guest/elf/: riscv32im-pico-zkvm-elf
pico/fibonacci-guest/src/: main.rs
pico/fibonacci/elf/: riscv32im-pico-zkvm-elf
pico/fibonacci/prover/: Cargo.toml
pico/host/: Cargo.toml
pico/sha2-256/app/: Cargo.toml
pico/sha2-256/lib/: Cargo.toml
pico/sha2-256/prover/: Cargo.toml
pico/sha2-guest/: Cargo.toml
pico/sha2-guest/elf/: riscv32im-pico-zkvm-elf
pico/sha2-guest/src/: main.rs
pico/transfer-eth/: Cargo.toml
pico/transfer-eth-guest/: Cargo.toml
pico/transfer-eth-guest/elf/: riscv32im-pico-zkvm-elf
pico/transfer-eth-guest/src/: main.rs
pico/transfer-eth/app/: Cargo.toml
pico/transfer-eth/prover/: Cargo.toml
sp1/: Cargo.toml  build.rs  rust-toolchain
sp1-turbo/: Cargo.toml  README.md
sp1-turbo/ecdsa/: message.txt  signature.txt  verifying_key.txt
sp1-turbo/ecdsa/helper/: Cargo.toml
sp1-turbo/ecdsa/lib/: Cargo.toml
sp1-turbo/ecdsa/program/: Cargo.toml
sp1-turbo/ecdsa/script/: Cargo.toml
sp1-turbo/ethblock/helper/: Cargo.toml
sp1-turbo/ethblock/lib/: Cargo.toml
sp1-turbo/ethblock/program/: Cargo.toml
sp1-turbo/ethblock/script/: Cargo.toml
sp1-turbo/ethblock/utils/: Cargo.toml
sp1-turbo/fibonacci/lib/: Cargo.toml
sp1-turbo/fibonacci/program/: Cargo.toml
sp1-turbo/fibonacci/script/: Cargo.toml
sp1-turbo/sha2-guest/: Cargo.toml
sp1-turbo/sha2-guest/src/: main.rs
sp1-turbo/sha2/lib/: Cargo.toml
sp1-turbo/sha2/program/: Cargo.toml
sp1-turbo/sha2/script/: Cargo.toml
sp1-turbo/transfer-eth-guest/src/: main.rs
sp1-turbo/transfer-eth/program/: Cargo.toml
sp1-turbo/transfer-eth/script/: Cargo.toml
sp1/bigmem/: Cargo.toml
sp1/ecdsa-guest/: Cargo.toml
sp1/ecdsa-guest/src/: main.rs
sp1/fibonacci/: Cargo.toml
sp1/fibonacci-guest/: Cargo.toml
sp1/fibonacci-guest/src/: main.rs
sp1/host/: Cargo.toml  build.rs
sp1/sha2/: Cargo.toml
sp1/sha2-chain/: Cargo.toml
sp1/sha2-guest/: Cargo.toml
sp1/sha3/: Cargo.toml
sp1/sha3-chain/: Cargo.toml
sp1/src/: main.rs
sp1/transfer-eth-guest/: Cargo.toml
utils/: Cargo.toml
utils/src/: bench.rs  lib.rs  metadata.rs  profile.rs
zkm/: Cargo.toml  build.rs
zkm/ecdsa/: Cargo.toml
zkm/ecdsa/src/: main.rs
zkm/programs/: Cargo.toml
zkm/programs/bigmem/: Cargo.toml
zkm/programs/ecdsa/: Cargo.toml
zkm/programs/fibonacci/: Cargo.toml
zkm/programs/sha2/: Cargo.toml
zkm/programs/sha2-chain/: Cargo.toml
zkm/programs/sha3/: Cargo.toml
zkm/programs/sha3-chain/: Cargo.toml
zkm/programs/tendermint/: Cargo.toml
zkm/programs/transfer-eth/: Cargo.toml
zkm/src/: lib.rs  main.rs  tendermint.rs
zkm2/: Cargo.toml  build.rs
zkm2/programs/: Cargo.toml
zkm2/programs/bigmem/: Cargo.toml
zkm2/programs/fibonacci/: Cargo.toml
zkm2/programs/sha2/: Cargo.toml
zkm2/programs/sha2-chain/: Cargo.toml
zkm2/programs/sha3/: Cargo.toml
zkm2/programs/sha3-chain/: Cargo.toml
zkm2/programs/transfer-eth/: Cargo.toml
zkm2/src/: lib.rs  main.rs
(+105 files in other folders)
