[package]
name = "cairo-zero"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.12"
sonic-rs = "0.5.1"

cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo.git", rev = "5cc466a" }
cairo-prove = { git = "https://github.com/starkware-libs/stwo-cairo" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "b1a91f929b5fa29a1a2e9e6990a68a1220c0c673", features = [
  "mod_builtin",
] }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }

utils = { path = "../utils" }
dotenv = "0.15.0"
