[package]
name = "ethblock-utils"
version = "0.1.0"
edition = "2021"

[dependencies]

# revm アップデートが早く壊れやすいので、バージョンを固定
revm = {version="=22.0.0", default-features = false, features = ["serde"]}
revm-database = {version="=3.0.0", default-features = false, features = ["serde"]}
alloy-eip2930 = { version = "0.1.0", features = ["serde"] } ## revmが依存しているAccessListのSerdeを有効にする

# serialize
bincode = "1.3.3"
serde = {version = "1.0.217", features = ["derive"]}