[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10.8", default-features = false, optional = true }
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "ecdsa",
], default-features = false, optional = true }
getrandom = { version = "0.2", features = ["custom"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["no_std"]
std = ["k256", "getrandom", "serde"]
no_std = ["sha2"]