[package]
name = "jolt-benchmarks"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "sha2-chain-guest",
    "sha3-chain-guest",
    "sha2-guest",
    "sha3-guest",
    "fibonacci-guest",
    "bigmem-guest",
    "ecdsa-guest",
]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["host"] }
utils = { path = "../utils" }
hex = "0.4.3"
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
], default-features = false }
getrandom = { version = "0.2", features = ["custom"] }

sha2-chain-guest = { path = "./sha2-chain-guest" }
sha3-chain-guest = { path = "./sha3-chain-guest" }
sha2-guest = { path = "./sha2-guest" }
sha3-guest = { path = "./sha3-guest" }
fibonacci-guest = { path = "./fibonacci-guest" }
bigmem-guest = { path = "./bigmem-guest" }
ecdsa-guest = {path = "./ecdsa-guest"}

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }

[features]
icicle = ["jolt/icicle"]