[package]
name = "jolt-benchmarks"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "sha2-guest",
    "fibonacci-guest",
    "ecdsa-guest",
    "transfer-eth-guest"
]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev = "b22e78773cb84817137a510fc0fe06ffa928d138", features = ["host"] }
utils = { path = "../utils" }
hex = "0.4.3"

sha2-guest = { path = "./sha2-guest" }
fibonacci-guest = { path = "./fibonacci-guest" }
ecdsa-guest = {path = "./ecdsa-guest"}
transfer-eth-guest = {path = "./transfer-eth-guest"}

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }

[features]
icicle = ["jolt/icicle"]
