[workspace]
members = ["runner"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
acvm = { git = "https://github.com/noir-lang/noir.git", package = "acvm", rev = "nightly-2025-05-28" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", package = "bn254_blackbox_solver", rev = "nightly-2025-05-28" }
nargo = { git = "https://github.com/noir-lang/noir.git", package = "nargo", rev = "nightly-2025-05-28" }
noirc_abi = { git = "https://github.com/noir-lang/noir.git", package = "noirc_abi", rev = "nightly-2025-05-28" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir.git", package = "noirc_artifacts", rev = "nightly-2025-05-28" }
noir-r1cs = { git = "https://github.com/worldfnd/ProveKit", package = "noir-r1cs" }
serde = "1.0.219"
sonic-rs = "0.5.2"
thiserror = "2.0.12"
utils = { path = "../utils" }
dotenv = "0.15.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
