[workspace]
members = [
  "fibonacci"
]
resolver = "2"

[patch.crates-io]
pasta_curves = { git = "https://github.com/lurk-lab/pasta_curves", branch = "dev" }
bellpepper = { git = "https://github.com/lurk-lab/bellpepper", branch = "dev", package = "bellpepper"}
# bellpepper-core = { git = "https://github.com/lurk-lab/bellpepper", branch = "dev", package = "bellpepper-core"}