[package]
name = "openvm-benchmarks"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "fibonacci-guest",
    "sha2-guest",
    "ecdsa-guest",
    "transfer-eth-guest"
]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "333b367f3ba64da40191726b76ba24af24a97888" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", rev = "333b367f3ba64da40191726b76ba24af24a97888" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", rev = "333b367f3ba64da40191726b76ba24af24a97888" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", rev = "c662bccdfafaa36fa19ab0a96ff3a0947f8331d0", default-features = false }
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", rev = "333b367f3ba64da40191726b76ba24af24a97888" }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "333b367f3ba64da40191726b76ba24af24a97888" }

utils = { path = "../utils" }
eyre = "0.6.12"
serde = "1.0.26"
hex = "0.4.3"
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
], default-features = false }
getrandom = { version = "0.2", features = ["custom"] }

fibonacci-guest = { path = "./fibonacci-guest" }
sha2-guest = { path = "./sha2-guest" }
ecdsa-guest = { path = "./ecdsa-guest" }
transfer-eth-guest = { path = "./transfer-eth-guest" }

[features]
default = []
std = ["openvm/std", "transfer-eth-guest/std", "ecdsa-guest/std"]