[package]
name = "openvm-benchmarks"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["fibonacci-guest", "sha2-guest", "ecdsa-guest", "transfer-eth-guest"]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
guests = { path = "../guests", features = ["fibonacci"] }
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.1.0", default-features = false }
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0" }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0" }

utils = { path = "../utils" }
eyre = "0.6.12"

fibonacci-guest = { path = "./fibonacci-guest" }
sha2-guest = { path = "./sha2-guest" }
ecdsa-guest = { path = "./ecdsa-guest" }
transfer-eth-guest = { path = "./transfer-eth-guest" }

[features]
default = []
std = ["openvm/std", "transfer-eth-guest/std", "ecdsa-guest/std"]
