[workspace]
members = [
    "host",
    "fibonacci-guest",
    "sha2-guest",
    "ecdsa-guest",
    "transfer-eth-guest",
    "ethblock-guest",
]
resolver = "2"

[workspace.dependencies]
pico-sdk = { git = "https://github.com/brevis-network/pico" }
serde = { version = "1.0.205", features = ["derive"] }
utils = { path = "../utils" }