[workspace]
members = [
  "fibonacci/lib",
  "fibonacci/program",
  "fibonacci/script",
  "sha2/lib",
  "sha2/program",
  "sha2/script",
  "ecdsa/lib",
  "ecdsa/program",
  "ecdsa/script",
  "ethblock/helper",
  "ethblock/utils",
  "ethblock/lib",
  "ethblock/program",
  "ethblock/script",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.8"

# [patch.crates-io]
# alloy-eip2930 = { version = "0.1.0", default-features = false, features = ["serde"]}