[workspace]
members = [
  "fibonacci/lib",
  "fibonacci/program",
  "fibonacci/script",
  "sha2/lib",
  "sha2/program",
  "sha2/script",
  "ecdsa/lib",
  "ecdsa/program",
  "ecdsa/script",
  # "ethblock/helper",
  # "ethblock/utils",
  # "ethblock/lib",
  # "ethblock/program",
  # "ethblock/script",
  "transfer-eth/program",
  "transfer-eth/script"
]
resolver = "2"
