[workspace]
[package]
version = "0.1.0"
name = "sp1-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
sp1-core-executor = { git = "https://github.com/succinctlabs/sp1.git", rev = "v4.0.1" }
sp1-core-machine = { git = "https://github.com/succinctlabs/sp1.git", rev = "v4.0.1" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v4.0.1" }
hex = "0.4.3"
bincode = "1.3.3"