[workspace]
[package]
version = "0.1.0"
name = "zkm-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
hex = "0.4.3"
bincode = "1.3.3"
serde = "1.0.204"
serde_json = "1.0.132"
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
  "rust-crypto",
] }
serde_cbor = "0.11.2"
zkm-build = { git = "https://github.com/zkMIPS/zkMIPS.git" }
zkm-core-machine = { git = "https://github.com/zkMIPS/zkMIPS.git" }
zkm-sdk = { git = "https://github.com/zkMIPS/zkMIPS.git" }

[build-dependencies]
zkm-build = { git = "https://github.com/zkMIPS/zkMIPS.git" }
