[workspace]
[package]
version = "0.1.0"
name = "zkm-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
zkm-build = { git = "https://github.com/zkMIPS/zkMIPS.git" }
zkm-core-machine = { git = "https://github.com/zkMIPS/zkMIPS.git" }
zkm-sdk = { git = "https://github.com/zkMIPS/zkMIPS.git" }

[build-dependencies]
zkm-build = { git = "https://github.com/zkMIPS/zkMIPS.git" }
