[workspace]
[package]
version = "0.1.0"
name = "zkm2-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
hex = "0.4.3"
bincode = "1.3.3"
zkm2-build = { git = "https://github.com/zkMIPS/zkm2.git", branch = "dev/init" }
zkm2-core-machine = { git = "https://github.com/zkMIPS/zkm2.git", branch = "dev/init" }
zkm2-sdk = { git = "https://github.com/zkMIPS/zkm2.git", branch = "dev/init" }

[build-dependencies]
zkm2-build = { git = "https://github.com/zkMIPS/zkm2.git", branch = "dev/init" }

[[bin]]
name = "fibo"
path = "src/bin/fibonacci.rs"

[[bin]]
name = "bigmem"
path = "src/bin/bigmem.rs"

[[bin]]
name = "sha2"
path = "src/bin/sha2.rs"

[[bin]]
name = "sha3"
path = "src/bin/sha3.rs"

[[bin]]
name = "sha2-chain"
path = "src/bin/sha2_chain.rs"

[[bin]]
name = "sha3-chain"
path = "src/bin/sha3_chain.rs"

[[bin]]
name = "all"
path = "src/main.rs"
