[package]
name = "sha2-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sha2-guest"
path = "src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev = "b22e78773cb84817137a510fc0fe06ffa928d138", features = ["guest-std"]}
guests = { path = "../../guests", features = ["no_std"] }