[package]
name = "sha3-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sha3-guest"
path = "src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev = "b22e78773cb84817137a510fc0fe06ffa928d138", features = ["guest-std"]}
sha3 = { version = "0.10.8", default-features = false }
