[package]
name = "ethblock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # compile wasm without main

[dependencies]
# revm
revm = {git = "https://github.com/bluealloy/revm", default-features = false, features = ["serde"]}
revm-database = {git = "https://github.com/bluealloy/revm", default-features = false, features = ["serde"]}
alloy-eip2930 = { version = "0.1.0", features = ["serde"] } ## revmが依存しているAccessListのSerdeを有効にする

# cusom
ethblock-utils = {path = "../utils"}

# serialize
bincode = "1.3.3"
serde = "1.0.217"

getrandom = { version = "=0.2.12", features = ["custom"] }
rand = { version = "=0.8.5", features = ["small_rng"] }