[package]
version = "0.1.0"
name = "runner"
edition = "2021"

[dependencies]
clap = {version = "4.5.30", features = ["derive"]}
zk-engine = { git = "https://github.com/ICME-Lab/zkEngine_dev", branch= "main" }
utils ={ path = "../../utils" }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0"}