[package]
name = "ecdsa-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0" }
hex = "0.4.3"
serde = "1.0.26"
guests = { path = "../../guests", features = ["with-ecdsa"] }

[features]
default = ["std"]
std = ["openvm/std"]
