[package]
name = "sha2-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0" }
openvm-platform = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0" }
openvm-sha256-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[features]
default = []
std = ["openvm/std"]
