[package]
name = "transfer-eth-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "333b367f3ba64da40191726b76ba24af24a97888" }
revm-utils = {git = "https://github.com/ClankPan/revm-utils" }
getrandom = { version = "0.2", features = ["custom"] }

[features]
default = ["std"]
std = ["openvm/std"]
