[workspace]
members = [
  "bigmem",
  "fibonacci",
  "sha2",
  "sha2-chain",
  "sha3",
  "sha3-chain",
  "tendermint",
  "ecdsa",
  "transfer-eth",
]
resolver = "2"

[workspace.dependencies]
zkm-zkvm = { git = "https://github.com/zkMIPS/zkMIPS.git" }
serde = "1.0.204"
serde_json = "1.0.132"
guests = { path = "../../guests" }

[workspace.package]
version = "1.1.0"
edition = "2021"
