[package]
name = "ecdsa-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
sha2 = { version = "0.10.8", default-features = false }
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
], default-features = false }